--- a/telekom.ipynb
+++ b/telekom.ipynb
@@ -1,1 +1,297 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ebbfc227",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n",
+    "import numpy as np\n",
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94f63fdd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 12.0.3 build v12.0.3rc0 (mac64[arm] - Darwin 23.6.0 23H626)\n",
+      "\n",
+      "CPU model: Apple M1\n",
+      "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 2393 rows, 702 columns and 6693 nonzeros\n",
+      "Model fingerprint: 0x85b85372\n",
+      "Variable types: 26 continuous, 676 integer (676 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 3e+01]\n",
+      "  Objective range  [2e+00, 6e+01]\n",
+      "  Bounds range     [1e+00, 3e+01]\n",
+      "  RHS range        [1e+00, 2e+01]\n",
+      "Presolve removed 1637 rows and 161 columns\n",
+      "Presolve time: 0.02s\n",
+      "Presolved: 756 rows, 541 columns, 3135 nonzeros\n",
+      "Variable types: 22 continuous, 519 integer (519 binary)\n",
+      "Found heuristic solution: objective 349.2201849\n",
+      "\n",
+      "Root relaxation: objective 1.339359e+02, 127 iterations, 0.00 seconds (0.00 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "     0     0  133.93595    0   34  349.22018  133.93595  61.6%     -    0s\n",
+      "H    0     0                     336.7621695  133.93595  60.2%     -    0s\n",
+      "H    0     0                     206.0607410  133.93595  35.0%     -    0s\n",
+      "H    0     0                     167.8640080  133.93595  20.2%     -    0s\n",
+      "     0     0  137.38658    0   10  167.86401  137.38658  18.2%     -    0s\n",
+      "     0     0  137.62033    0   10  167.86401  137.62033  18.0%     -    0s\n",
+      "     0     0  139.22221    0   14  167.86401  139.22221  17.1%     -    0s\n",
+      "     0     0  139.22221    0   31  167.86401  139.22221  17.1%     -    0s\n",
+      "H    0     0                     148.5349907  139.22221  6.27%     -    0s\n",
+      "H    0     0                     145.5444098  139.22221  4.34%     -    0s\n",
+      "     0     0  139.37025    0   19  145.54441  139.37025  4.24%     -    0s\n",
+      "     0     0  139.37025    0   14  145.54441  139.37025  4.24%     -    0s\n",
+      "     0     0  139.37025    0   19  145.54441  139.37025  4.24%     -    0s\n",
+      "     0     0  139.53126    0   19  145.54441  139.53126  4.13%     -    0s\n",
+      "     0     0  140.02924    0   17  145.54441  140.02924  3.79%     -    0s\n",
+      "     0     0  141.19771    0    8  145.54441  141.19771  2.99%     -    0s\n",
+      "     0     0  141.57222    0    8  145.54441  141.57222  2.73%     -    0s\n",
+      "     0     0  142.80179    0   10  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0   10  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0   14  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0    8  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0   12  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0   10  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     0  142.80179    0   10  145.54441  142.80179  1.88%     -    0s\n",
+      "     0     2  142.80179    0   10  145.54441  142.80179  1.88%     -    0s\n",
+      "*   49     8               7     145.4539413  142.80179  1.82%   7.1    0s\n",
+      "\n",
+      "Cutting planes:\n",
+      "  Learned: 2\n",
+      "  Gomory: 13\n",
+      "  MIR: 5\n",
+      "  StrongCG: 3\n",
+      "  Flow cover: 6\n",
+      "  Zero half: 5\n",
+      "  Relax-and-lift: 6\n",
+      "\n",
+      "Explored 69 nodes (1031 simplex iterations) in 0.30 seconds (0.19 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 7: 145.454 145.544 148.535 ... 349.22\n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 1.454539412982e+02, best bound 1.454539412982e+02, gap 0.0000%\n",
+      "Objective (total length): 145.454\n",
+      "Selected cities: ['Warsaw', 'Opole', 'Kalisz', 'Leszno', 'Legnica', 'Kraków', 'Sieradz', 'Kielce', 'Radom', 'Jelenia Góra', 'Gliwice', 'Konin', 'Jastrzębie-Zdrój', 'Bielsko']\n",
+      "Path: Warsaw -> Radom -> Kielce -> Kraków -> Bielsko -> Jastrzębie-Zdrój -> Gliwice -> Opole -> Sieradz -> Konin -> Kalisz -> Leszno -> Legnica -> Jelenia Góra\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import gurobipy as gp\n",
+    "from gurobipy import GRB\n",
+    "import math\n",
+    "\n",
+    "# City coordinates (Euclidean). Keys must match names used in sets below.\n",
+    "coords = {\n",
+    "    \"Warsaw\": (100, 65),\n",
+    "    \"Skierniewice\": (92, 62),\n",
+    "    \"Łódź\": (85, 58),\n",
+    "    \"Konin\": (68, 64),\n",
+    "    \"Sieradz\": (72, 55),\n",
+    "    \"Piotrków\": (89, 51),\n",
+    "    \"Radom\": (102, 50),\n",
+    "    \"Kielce\": (98, 42),\n",
+    "    \"Czestochowa\": (79, 40),\n",
+    "    \"Bytom\": (76, 31),\n",
+    "    \"Gliwice\": (73, 30),\n",
+    "    \"Sosnowiec\": (80, 29),\n",
+    "    \"Kraków\": (89, 25),\n",
+    "    \"Bielsko\": (79, 20),\n",
+    "    \"Katowice\": (78, 28),\n",
+    "    \"Jastrzębie-Zdrój\": (74, 23),\n",
+    "    \"Wodzisław Śląski\": (71, 23),\n",
+    "    \"Poznań\": (54, 68),\n",
+    "    \"Zielona Góra\": (39, 60),\n",
+    "    \"Leszno\": (51, 58),\n",
+    "    \"Kalisz\": (65, 58),\n",
+    "    \"Legnica\": (45, 47),\n",
+    "    \"Wrocław\": (54, 45),\n",
+    "    \"Jelenia Góra\": (40, 42),\n",
+    "    \"Wałbrzych\": (46, 39),\n",
+    "    \"Opole\": (67, 37)\n",
+    "}\n",
+    "\n",
+    "# Areas (partition of N)\n",
+    "N1 = {\"Warsaw\", \"Skierniewice\", \"Łódź\", \"Konin\", \"Sieradz\", \"Piotrków\", \"Radom\"}\n",
+    "N2 = {\"Kielce\", \"Czestochowa\", \"Bytom\", \"Gliwice\", \"Sosnowiec\",\n",
+    "      \"Kraków\", \"Bielsko\", \"Katowice\", \"Jastrzębie-Zdrój\", \"Wodzisław Śląski\"}\n",
+    "N3 = {\"Poznań\", \"Zielona Góra\", \"Leszno\", \"Kalisz\", \"Legnica\",\n",
+    "      \"Wrocław\", \"Jelenia Góra\", \"Wałbrzych\", \"Opole\"}\n",
+    "\n",
+    "# Policy sets\n",
+    "K1 = {\"Konin\", \"Kalisz\"} & set(coords)           # at least one\n",
+    "K2 = {\"Bytom\", \"Sosnowiec\", \"Katowice\"} & set(coords)  # at most one\n",
+    "K3 = {\"Wodzisław Śląski\", \"Jastrzębie-Zdrój\"} & set(coords)  # at most one\n",
+    "K4 = {\"Poznań\", \"Zielona Góra\", \"Leszno\"} & set(coords)      # at least one\n",
+    "\n",
+    "# Mandatory edges (directed) — adjust direction if needed\n",
+    "MANDATORY_EDGES = [(\"Radom\", \"Kielce\"), (\"Gliwice\", \"Opole\")]\n",
+    "\n",
+    "# Sanity: build N and verify disjoint + cover\n",
+    "N = set(coords)\n",
+    "assert N1 | N2 | N3 <= N, \"Area sets must be subset of N\"\n",
+    "assert (N1 & N2) == set() and (N1 & N3) == set() and (N2 & N3) == set(), \"Areas must be disjoint\"\n",
+    "\n",
+    "\n",
+    "def euclid(a, b):\n",
+    "    ax, ay = coords[a]; bx, by = coords[b]\n",
+    "    return math.hypot(ax - bx, ay - by)\n",
+    "\n",
+    "# Precompute distances (no self-arcs)\n",
+    "d = {(i, j): euclid(i, j) for i in N for j in N if i != j}\n",
+    "\n",
+    "m = gp.Model(\"Telecom_Path_SW_Poland\")\n",
+    "\n",
+    "# Big-M for MTZ ordering (safe upper bound: |N|)\n",
+    "M = len(N)\n",
+    "\n",
+    "\n",
+    "# x[i,j] = 1 if path uses directed arc i->j\n",
+    "x = m.addVars(d.keys(), vtype=GRB.BINARY, name=\"x\")\n",
+    "# y[i] = 1 if city i is included\n",
+    "y = m.addVars(N, vtype=GRB.BINARY, name=\"y\")\n",
+    "# u[i] = position index in the path (continuous)\n",
+    "u = m.addVars(N, lb=0.0, ub=M, vtype=GRB.CONTINUOUS, name=\"u\")\n",
+    "\n",
+    "\n",
+    "m.setObjective(gp.quicksum(d[i, j] * x[i, j] for (i, j) in d), GRB.MINIMIZE)\n",
+    "\n",
+    "\n",
+    "\n",
+    "# 1) Start/End degree constraints\n",
+    "# Start: exactly one outgoing from Warsaw; no incoming to Warsaw\n",
+    "m.addConstr(gp.quicksum(x[\"Warsaw\", j] for j in N if j != \"Warsaw\") == 1, \"start_out\")\n",
+    "m.addConstr(gp.quicksum(x[i, \"Warsaw\"] for i in N if i != \"Warsaw\") == 0, \"start_in\")\n",
+    "\n",
+    "# End: exactly one incoming to Jelenia Góra; no outgoing from Jelenia Góra\n",
+    "m.addConstr(gp.quicksum(x[i, \"Jelenia Góra\"] for i in N if i != \"Jelenia Góra\") == 1, \"end_in\")\n",
+    "m.addConstr(gp.quicksum(x[\"Jelenia Góra\", j] for j in N if j != \"Jelenia Góra\") == 0, \"end_out\")\n",
+    "\n",
+    "# Flow conservation for intermediate nodes (equal to y_j)\n",
+    "for j in N - {\"Warsaw\", \"Jelenia Góra\"}:\n",
+    "    m.addConstr(gp.quicksum(x[i, j] for i in N if i != j) == y[j], f\"in_{j}\")\n",
+    "    m.addConstr(gp.quicksum(x[j, k] for k in N if k != j) == y[j], f\"out_{j}\")\n",
+    "\n",
+    "# City inclusion for endpoints\n",
+    "m.addConstr(y[\"Warsaw\"] == 1, \"y_warsaw\")\n",
+    "m.addConstr(y[\"Jelenia Góra\"] == 1, \"y_jg\")\n",
+    "\n",
+    "# 2) Mandatory cities (as per statement)\n",
+    "for city in [\"Radom\", \"Kielce\", \"Gliwice\", \"Opole\"]:\n",
+    "    if city in N:\n",
+    "        m.addConstr(y[city] == 1, f\"mandatory_{city}\")\n",
+    "\n",
+    "# 3) Area coverage counts\n",
+    "m.addConstr(gp.quicksum(y[i] for i in N1) == 4, \"area1_count\")\n",
+    "m.addConstr(gp.quicksum(y[i] for i in N2) == 5, \"area2_count\")\n",
+    "m.addConstr(gp.quicksum(y[i] for i in N3) == 5, \"area3_count\")\n",
+    "\n",
+    "# 4) Policy constraints\n",
+    "if K1: m.addConstr(gp.quicksum(y[i] for i in K1) >= 1, \"policy_K1\")\n",
+    "if K2: m.addConstr(gp.quicksum(y[i] for i in K2) <= 1, \"policy_K2\")\n",
+    "if K3: m.addConstr(gp.quicksum(y[i] for i in K3) <= 1, \"policy_K3\")\n",
+    "if K4: m.addConstr(gp.quicksum(y[i] for i in K4) >= 1, \"policy_K4\")\n",
+    "\n",
+    "# 5) No bidirectional connections\n",
+    "for i in N:\n",
+    "    for j in N:\n",
+    "        if i < j:  # avoid duplicates\n",
+    "            if (i, j) in x and (j, i) in x:\n",
+    "                m.addConstr(x[i, j] + x[j, i] <= 1, f\"nobidir_{i}_{j}\")\n",
+    "\n",
+    "# 6) Edge-activation implies node-activation\n",
+    "for (i, j) in d:\n",
+    "    m.addConstr(x[i, j] <= y[i], f\"x_le_yi_{i}_{j}\")\n",
+    "    m.addConstr(x[i, j] <= y[j], f\"x_le_yj_{i}_{j}\")\n",
+    "\n",
+    "# 7) Mandatory existing infrastructure edges fixed ON\n",
+    "for (a, b) in MANDATORY_EDGES:\n",
+    "    if (a in N) and (b in N) and (a, b) in x:\n",
+    "        m.addConstr(x[a, b] == 1, f\"mandatory_edge_{a}_{b}\")\n",
+    "        # These imply y[a]=y[b]=1 already via edge->node constraints\n",
+    "\n",
+    "# 8) MTZ subtour elimination (path version)\n",
+    "# u[Warsaw] = 1, others between 0 and M*y[i]\n",
+    "m.addConstr(u[\"Warsaw\"] == 1, \"u_start\")\n",
+    "for i in N - {\"Warsaw\"}:\n",
+    "    # If y[i] = 0 -> allow u[i] = 0; if y[i] = 1 -> 1..M\n",
+    "    m.addConstr(u[i] >= y[i], f\"u_lb_{i}\")       # lower bound activates with y\n",
+    "    m.addConstr(u[i] <= M * y[i], f\"u_ub_{i}\")  # upper bound deactivates with y\n",
+    "\n",
+    "# MTZ core: for all i != j, enforce order when x[i,j]=1\n",
+    "for i in N:\n",
+    "    for j in N:\n",
+    "        if i != j and (i, j) in x:\n",
+    "            # u_i - u_j + M*x_ij <= M - 1\n",
+    "            # This naturally allows when x_ij=0; when x_ij=1 => u_i + 1 <= u_j\n",
+    "            m.addConstr(u[i] - u[j] + M * x[i, j] <= M - 1, f\"mtz_{i}_{j}\")\n",
+    "\n",
+    "# ---------- SOLVE ----------\n",
+    "m.optimize()\n",
+    "\n",
+    "# ---------- EXTRACT SOLUTION ----------\n",
+    "if m.status == GRB.OPTIMAL:\n",
+    "    print(f\"Objective (total length): {m.objVal:.3f}\")\n",
+    "    selected_nodes = [i for i in N if y[i].X > 0.5]\n",
+    "    print(\"Selected cities:\", selected_nodes)\n",
+    "\n",
+    "    # Build successor map and reconstruct path\n",
+    "    succ = {i: None for i in N}\n",
+    "    for (i, j), var in x.items():\n",
+    "        if var.X > 0.5:\n",
+    "            succ[i] = j\n",
+    "\n",
+    "    path = [\"Warsaw\"]\n",
+    "    while succ[path[-1]] is not None:\n",
+    "        path.append(succ[path[-1]])\n",
+    "        if len(path) > len(N):  # safety\n",
+    "            break\n",
+    "    print(\"Path:\", \" -> \".join(path))\n",
+    "else:\n",
+    "    print(\"No optimal solution found. Status:\", m.status)\n"
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.5"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 5
+}
