--- a/telekom.ipynb
+++ b/telekom.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "98ee75c1",
    "metadata": {},
    "outputs": [
@@ -18,41 +18,36 @@
       "Thread count: 8 physical cores, 8 logical processors, using up to 8 threads\n",
       "\n",
       "Optimize a model with 193 rows, 204 columns and 1307 nonzeros\n",
-      "Model fingerprint: 0x85ca3b23\n",
+      "Model fingerprint: 0x51491074\n",
       "Variable types: 0 continuous, 204 integer (204 binary)\n",
       "Coefficient statistics:\n",
       "  Matrix range     [1e+00, 1e+00]\n",
       "  Objective range  [2e+00, 4e+01]\n",
       "  Bounds range     [1e+00, 1e+00]\n",
       "  RHS range        [1e+00, 4e+00]\n",
-      "Found heuristic solution: objective 267.4522983\n",
+      "Found heuristic solution: objective 297.1330951\n",
       "Presolve removed 118 rows and 116 columns\n",
       "Presolve time: 0.02s\n",
       "Presolved: 75 rows, 88 columns, 493 nonzeros\n",
-      "Found heuristic solution: objective 243.8175348\n",
+      "Found heuristic solution: objective 244.1769434\n",
       "Variable types: 0 continuous, 88 integer (88 binary)\n",
       "\n",
-      "Root relaxation: objective 1.241697e+02, 21 iterations, 0.00 seconds (0.00 work units)\n",
+      "Root relaxation: objective 1.241697e+02, 22 iterations, 0.00 seconds (0.00 work units)\n",
       "\n",
       "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
       " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
       "\n",
-      "     0     0  124.16973    0   14  243.81753  124.16973  49.1%     -    0s\n",
-      "H    0     0                     200.3035948  124.16973  38.0%     -    0s\n",
-      "H    0     0                     154.3648229  124.16973  19.6%     -    0s\n",
+      "     0     0  124.16973    0   14  244.17694  124.16973  49.1%     -    0s\n",
+      "H    0     0                     174.3658329  124.16973  28.8%     -    0s\n",
+      "H    0     0                     164.3960673  124.16973  24.5%     -    0s\n",
       "H    0     0                     135.7207227  124.16973  8.51%     -    0s\n",
       "     0     0  128.94951    0    4  135.72072  128.94951  4.99%     -    0s\n",
-      "     0     0  128.94951    0    5  135.72072  128.94951  4.99%     -    0s\n",
       "H    0     0                     130.9979615  128.94951  1.56%     -    0s\n",
       "\n",
-      "Cutting planes:\n",
-      "  Gomory: 2\n",
-      "  Zero half: 3\n",
-      "\n",
-      "Explored 1 nodes (37 simplex iterations) in 0.05 seconds (0.01 work units)\n",
+      "Explored 1 nodes (24 simplex iterations) in 0.04 seconds (0.01 work units)\n",
       "Thread count was 8 (of 8 available processors)\n",
       "\n",
-      "Solution count 8: 130.998 135.721 139.056 ... 267.452\n",
+      "Solution count 7: 130.998 135.721 140.673 ... 297.133\n",
       "\n",
       "Optimal solution found (tolerance 1.00e-04)\n",
       "Best objective 1.309979614703e+02, best bound 1.309979614703e+02, gap 0.0000%\n",
@@ -97,7 +92,8 @@
       "  ✓ Kalisz included\n",
       "  ✓ Decentralization: 0 city from ['Bytom', 'Sosnowiec', 'Katowice']\n",
       "  ✓ Regional balance satisfied\n",
-      "  ✓ German connection: Leszno included\n"
+      "  ✓ German connection: Leszno included\n",
+      "Saved 14 main line cities to main_line_cities.csv\n"
      ]
     }
    ],
@@ -136,19 +132,6 @@
     "    \n",
     "    # Load data\n",
     "    coords, C1, C2, C3 = load_data()\n",
-    "    \n",
-    "    # Define start and end cities for each area (C_start,k and C_slutt,k)\n",
-    "    C_start = {\n",
-    "        1: \"Warsaw\",\n",
-    "        2: \"Kielce\", \n",
-    "        3: \"Opole\"\n",
-    "    }\n",
-    "    \n",
-    "    C_slutt = {\n",
-    "        1: \"Radom\",\n",
-    "        2: \"Gliwice\",\n",
-    "        3: \"Jelenia Góra\"\n",
-    "    }\n",
     "    \n",
     "    # NCITY_k parameters (number of arcs needed)\n",
     "    NCITY = {\n",
@@ -381,6 +364,7 @@
     "            print(f\"  ✓ German connection: {', '.join(included_k4)} included\")\n",
     "        else:\n",
     "            print(f\"  ✗ No German connection\")\n",
+    "        save_main_line_to_csv(path1, path2, path3)\n",
     "        \n",
     "        return (path1, path2, path3), total_length\n",
     "        \n",
@@ -392,7 +376,18 @@
     "            m.write(\"model.ilp\")\n",
     "            print(\"Infeasible constraint set written to model.ilp\")\n",
     "        return None, None\n",
-    "\n",
+    "    \n",
+    "def save_main_line_to_csv(path1, path2, path3):\n",
+    "    \"\"\"Save the main line cities in order to a CSV file\"\"\"\n",
+    "    \n",
+    "    # Combine all paths into one ordered list\n",
+    "    main_line_cities = path1 + path2 + path3\n",
+    "    \n",
+    "    # Create simple DataFrame with just the cities in order\n",
+    "    df = pd.DataFrame({'city': main_line_cities})\n",
+    "    df.to_csv('main_line_cities.csv', index=False)\n",
+    "    \n",
+    "    print(f\"Saved {len(main_line_cities)} main line cities to main_line_cities.csv\")\n",
     "if __name__ == \"__main__\":\n",
     "    # Check if data files exist\n",
     "    required_files = ['cities_data.csv', 'areas_data.csv']\n",
@@ -408,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "b6fdc6b1",
    "metadata": {},
    "outputs": [
@@ -482,14 +477,14 @@
       "--------------------------------------------------\n",
       "\n",
       "Switching Station Utilization:\n",
-      "  Opole: 400.00/400 TB/s (100.00%)\n",
       "  Kielce: 1200.00/1200 TB/s (100.00%)\n",
       "  Warsaw: 731.00/800 TB/s (91.38%)\n",
+      "  Opole: 400.00/400 TB/s (100.00%)\n",
       "\n",
       "All Connections (City -> Station: Flow):\n",
       "  Bytom: Kielce(163.0)\n",
       "  Czestochowa: Kielce(200.0), Warsaw(78.0)\n",
-      "  Katowice: Opole(61.1), Kielce(200.0), Warsaw(1.9)\n",
+      "  Katowice: Kielce(200.0), Warsaw(1.9), Opole(61.1)\n",
       "  Konin: Kielce(36.0), Warsaw(200.0)\n",
       "  Poznań: Kielce(100.8), Warsaw(150.2)\n",
       "  Sieradz: Kielce(59.1), Warsaw(118.9)\n",
@@ -497,14 +492,14 @@
       "  Wałbrzych: Opole(129.0)\n",
       "  Wodzisław Śląski: Kielce(119.0)\n",
       "  Wrocław: Opole(133.0)\n",
-      "  Zielona Góra: Opole(13.5), Kielce(52.2), Warsaw(55.3)\n",
-      "  Łódź: Opole(63.4), Kielce(126.8), Warsaw(126.8)\n",
+      "  Zielona Góra: Kielce(52.2), Warsaw(55.3), Opole(13.5)\n",
+      "  Łódź: Kielce(126.8), Warsaw(126.8), Opole(63.4)\n",
       "\n",
       "5. ŁÓDŹ SPECIAL CONSTRAINT (40% max per cable):\n",
       "--------------------------------------------------\n",
-      "  Łódź -> Opole: 63.40 TB/s (20.0% of total)\n",
       "  Łódź -> Kielce: 126.80 TB/s (40.0% of total)\n",
       "  Łódź -> Warsaw: 126.80 TB/s (40.0% of total)\n",
+      "  Łódź -> Opole: 63.40 TB/s (20.0% of total)\n",
       "Optimization successful! Objective: 66696434.43\n",
       "\n",
       "6. RESULTS SAVED TO FILES:\n",
@@ -523,13 +518,10 @@
     "\n",
     "# Set UTF-8 encoding for the environment\n",
     "os.environ['PYTHONIOENCODING'] = 'utf-8'\n",
-    "if sys.platform == 'win32':\n",
-    "    import locale\n",
-    "    locale.setlocale(locale.LC_ALL, 'en_US.UTF-8')\n",
+    "\n",
     "\n",
     "def load_data(filename='cities_data.csv'):\n",
     "    \"\"\"Load city data from CSV file\"\"\"\n",
-    "    # Read the CSV file\n",
     "    cities_df = pd.read_csv(filename)\n",
     "    \n",
     "    # Extract coordinates and capacities\n",
@@ -549,6 +541,7 @@
     "    x2, y2 = coords[city_b]\n",
     "    return math.sqrt((x1 - x2)**2 + (y1 - y2)**2)\n",
     "\n",
+    "#Our code wouldnt run properly without the conversion of letters\n",
     "def clean_name_for_constraint(name):\n",
     "    \"\"\"Convert city name to ASCII for constraint names\"\"\"\n",
     "    # Replace Polish characters with ASCII equivalents\n",
@@ -572,17 +565,8 @@
     "    \n",
     "    # Load city data\n",
     "    coords, capacities = load_data('cities_data.csv')\n",
-    "    \n",
-    "    # CORRECTED Main line cities from Task 1 solution\n",
-    "    # Based on the optimal solution with total distance 130.998\n",
-    "    main_line_cities = [\n",
-    "        # Area 1: Warsaw → Skierniewice → Piotrków → Radom\n",
-    "        \"Warsaw\", \"Skierniewice\", \"Piotrków\", \"Radom\",\n",
-    "        # Area 2: Kielce → Kraków → Bielsko → Jastrzębie-Zdrój → Gliwice\n",
-    "        \"Kielce\", \"Kraków\", \"Bielsko\", \"Jastrzębie-Zdrój\", \"Gliwice\",\n",
-    "        # Area 3: Opole → Kalisz → Leszno → Legnica → Jelenia Góra\n",
-    "        \"Opole\", \"Kalisz\", \"Leszno\", \"Legnica\", \"Jelenia Góra\"\n",
-    "    ]\n",
+    "    main_line_df = pd.read_csv('main_line_cities.csv')\n",
+    "    main_line_cities = main_line_df['city'].tolist()\n",
     "    \n",
     "    # Define sets\n",
     "    N = set(coords.keys())  # All cities\n",
@@ -691,7 +675,7 @@
     "        for j in S:\n",
     "            clean_i = clean_name_for_constraint(i)\n",
     "            clean_j = clean_name_for_constraint(j)\n",
-    "            shannon_limit = 2 * math.pi * min(35, 70 - d[i, j]) #fasit sier uten min greien\n",
+    "            shannon_limit = 2 * math.pi * min(35, 70 - d[i, j])\n",
     "            if shannon_limit > 0:\n",
     "                shannon_constrs[i, j] = m.addConstr(\n",
     "                    Q[i, j] <= shannon_limit, \n",
@@ -714,11 +698,6 @@
     "                f\"lodz_limit_{clean_j}\"\n",
     "            )\n",
     "    \n",
-    "    # Optimize\n",
-    "    print(\"\\n\" + \"-\"*40)\n",
-    "    print(\"Optimizing...\")\n",
-    "    print(\"-\"*40)\n",
-    "    \n",
     "    # Suppress Gurobi output during optimization\n",
     "    m.setParam('OutputFlag', 0)\n",
     "    m.optimize()\n",
@@ -728,21 +707,6 @@
     "        print(f\"Optimization successful! Objective: {m.objVal:.2f}\")\n",
     "    else:\n",
     "        print(f\"Optimization status: {m.status}\")\n",
-    "    \n",
-    "    # Check solution status\n",
-    "    if m.status != GRB.OPTIMAL:\n",
-    "        print(f\"\\nOptimization failed. Status: {m.status}\")\n",
-    "        if m.status == GRB.INFEASIBLE:\n",
-    "            print(\"Problem is infeasible. Computing IIS...\")\n",
-    "            m.computeIIS()\n",
-    "            m.write(\"task2_iis.ilp\")\n",
-    "            print(\"IIS written to task2_iis.ilp\")\n",
-    "        return None\n",
-    "    \n",
-    "    # Extract solution\n",
-    "    print(\"\\n\" + \"=\"*60)\n",
-    "    print(\"OPTIMAL SOLUTION FOUND\")\n",
-    "    print(\"=\"*60)\n",
     "    \n",
     "    total_cost = m.objVal\n",
     "    \n",
@@ -807,19 +771,6 @@
     "                })\n",
     "        if city_connections:\n",
     "            print(f\"  {i}: {', '.join(city_connections)}\")\n",
-    "    \n",
-    "    \n",
-    "    # Łódź special constraint check\n",
-    "    if \"Łódź\" in R:\n",
-    "        print(\"\\n5. ŁÓDŹ SPECIAL CONSTRAINT (40% max per cable):\")\n",
-    "        print(\"-\"*50)\n",
-    "        for j in S:\n",
-    "            flow = Q[\"Łódź\", j].X\n",
-    "            if flow > 0.001:\n",
-    "                percentage = (flow / c[\"Łódź\"]) * 100\n",
-    "                print(f\"  Łódź -> {j}: {flow:.2f} TB/s ({percentage:.1f}% of total)\")\n",
-    "    if m.status == GRB.OPTIMAL:\n",
-    "        print(f\"Optimization successful! Objective: {m.objVal:.2f}\")\n",
     "\n",
     "    \n",
     "    # Save results to CSV\n",
@@ -828,18 +779,12 @@
     "    print(\"\\n6. RESULTS SAVED TO FILES:\")\n",
     "    print(\"  - task2_results.csv (connection details)\")\n",
     "    \n",
-    "    # Export model for further analysis\n",
-    "    m.write(\"task2_model.lp\")\n",
-    "    m.write(\"task2_solution.sol\")\n",
-    "\n",
-    "    \n",
     "    return {\n",
     "        'model': m,\n",
     "        'total_cost': total_cost,\n",
     "        'connections': connections,\n",
     "        'variables': Q\n",
     "    }\n",
-    "    \n",
     "\n",
     "if __name__ == \"__main__\":\n",
     "    # Run Task 2 optimization\n",
@@ -849,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "5f96ed39",
    "metadata": {},
    "outputs": [
@@ -879,6 +824,83 @@
     "    print(f\"Upper limit: {con.SARHSUp:.4f}\")\n",
     "\n",
     "show_konin_sensitivity(results)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73e8c390",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sensitivity analysis pi\n",
+      "Upper limit: 3.24904\n",
+      "Lower limit: 2.85714\n"
+     ]
+    }
+   ],
+   "source": [
+    "def show_pi_sensitivity(results):\n",
+    "    \"\"\"Correct sensitivity analysis for π constant\"\"\"\n",
+    "    m = results['model']\n",
+    "    \n",
+    "    # Load data to get distances\n",
+    "    coords, capacities = load_data('cities_data.csv')\n",
+    "    \n",
+    "    # Main line cities\n",
+    "    main_line_cities = [\n",
+    "        \"Warsaw\", \"Skierniewice\", \"Piotrków\", \"Radom\",\n",
+    "        \"Kielce\", \"Kraków\", \"Bielsko\", \"Jastrzębie-Zdrój\", \"Gliwice\",\n",
+    "        \"Opole\", \"Kalisz\", \"Leszno\", \"Legnica\", \"Jelenia Góra\"\n",
+    "    ]\n",
+    "    \n",
+    "    N = set(coords.keys())\n",
+    "    main_line_set = set(main_line_cities)\n",
+    "    R = N - main_line_set  # Cities without main line\n",
+    "    S = {\"Warsaw\", \"Kielce\", \"Opole\"}  # Switching stations\n",
+    "    \n",
+    "    print(\"Sensitivity analysis pi\")\n",
+    "    \n",
+    "    lower_bound = float(\"-inf\")\n",
+    "    upper_bound = float(\"inf\")\n",
+    "    \n",
+    "    # Iterate over each city that does not have a main line\n",
+    "    for city in R:\n",
+    "        # For each city, iterate over each switching station\n",
+    "        for switching_station in S:\n",
+    "            # Get the Shannon constraint for this city-station pair\n",
+    "            clean_city = clean_name_for_constraint(city)\n",
+    "            clean_station = clean_name_for_constraint(switching_station)\n",
+    "            \n",
+    "            # Find the Shannon constraint\n",
+    "            shannon_constraint = None\n",
+    "            for con in m.getConstrs():\n",
+    "                if f\"shannon_{clean_city}_{clean_station}\" in con.ConstrName:\n",
+    "                    shannon_constraint = con\n",
+    "                    break\n",
+    "            \n",
+    "            if shannon_constraint is not None:\n",
+    "                try:\n",
+    "                    # Calculate distance\n",
+    "                    distance = euclid(city, switching_station, coords)\n",
+    "                    distance_factor = min(35, 70 - distance)\n",
+    "                    \n",
+    "                    if distance_factor > 0:\n",
+    "                        # Update bounds: RHS = 2 * π * distance_factor, so π = RHS / (2 * distance_factor)\n",
+    "                        lower_bound = max(lower_bound, shannon_constraint.SARHSLow / (2 * distance_factor))\n",
+    "                        upper_bound = min(upper_bound, shannon_constraint.SARHSUp / (2 * distance_factor))\n",
+    "                except:\n",
+    "                    continue\n",
+    "    \n",
+    "    print(f\"Upper limit: {upper_bound:.5f}\")\n",
+    "    print(f\"Lower limit: {lower_bound:.5f}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "show_pi_sensitivity(results)"
    ]
   }
  ],
